--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.php",
   "scripts": {
-    "watch": "npx tailwindcss -i assets/style.css -o assets/style-production.css --watch",
+    "watch": "npx tailwindcss -i assets/css/style.css -o assets/css/style-production.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
